# ARC2022S_group_3

./: .gitignore.txt
cartographer/: f1tenth.lua  f1tenth_carto.launch  place.txt  racecar.urdf  run_instruction.txt
f1tenth_simulator/: params.yaml
f1tenth_simulator/launch/: amcl.launch  ekf_odom_amcl.launch  ekf_odom_only.launch  localization.launch  localization_ekf.launch  map_server.launch  pose_ekf.launch  simulator.launch  simulator.rviz
f1tenth_simulator/maps/: map_name.yaml  mymap.pgm  mymap.yaml  racetrack_carto.pgm  racetrack_carto.yaml  test.yaml
f1tenth_simulator/node/: simulator.cpp
follow_the_gap/: CMakeLists.txt  package.xml
follow_the_gap/launch/: simulator.launch  teleop.launch
follow_the_gap/scripts/: follow_the_gap_node.py  follow_the_gap_node_funktioniert  follow_the_gap_node_oldOld.py
global_racetrajectory_optimization/: main_globaltraj.py
global_racetrajectory_optimization/inputs/tracks/: f1_wide_log.csv  waypoints_1.csv  waypoints_3.csv
global_racetrajectory_optimization/inputs/veh_dyn_info/: ax_f1thenth.csv  ggv_f1.csv
global_racetrajectory_optimization/params/: f1_racecar.ini
mpc_path_follow/: CMakeLists.txt  package.xml
mpc_path_follow/launch/: simulator.launch  teleop.launch
mpc_path_follow/src/: mpc_path_follow_node.cpp
path_planner/: CMakeLists.txt  package.xml
path_planner/launch/: planner.launch  read_raceline.launch  read_raceline_teleop.launch
path_planner/scripts/: planner.py  read_raceline.py
path_planner/waypoints/: f1_wide_log.csv  f1_wide_log_minCurv.csv  f1_wide_log_sp.csv  log_results2.csv  traj_race_cl.csv
pure_pursuit/: CMakeLists.txt  package.xml
pure_pursuit/launch/: simulator.launch  simulator_planner.launch
pure_pursuit/maps/: occop_map.yaml
pure_pursuit/scripts/: planner.py  pure_pursuit.py  pure_pursuit_adv.py  pure_pursuit_v2.py  visualization_helpers.py  waypoint_logger.py
pure_pursuit/upload_tuwel/: package.xml
pure_pursuit/upload_tuwel/scripts/: planner.py  pure_pursuit.py
pure_pursuit/waypoints/: log_results.csv  waypoints_1 copy.csv  waypoints_1.csv
safety_node1/: CMakeLists.txt  package.xml  safety_node1.launch
safety_node1/cfg/: configure.cfg
safety_node1/cfg/cpp/safety_node1/: safety_node1Config.h
safety_node1/docs/: safety_node1Config-usage.dox  safety_node1Config.dox  safety_node1Config.wikidoc
safety_node1/launch/: safety_node1_teleop.launch  simulator.launch
safety_node1/src/: precompute.cpp  safety_node.cpp
safety_node1/src/safety_node1/cfg/: safetyNode1Config.py  safety_node1Config.py
safety_node2/: CMakeLists.txt  package.xml  setup.py
safety_node2/launch/: safety_simulator.launch  simulator.launch
safety_node2/scripts/: safety_node.py
safety_node2/scripts/__pycache__/: precompute.cpython-38.pyc:Zone.Identifier
safety_node2/src/: precompute.py  safety_node.py
slow_crash/: CMakeLists.txt  package.xml
slow_crash/launch/: car_remapped_topics.launch  simulator.launch
slow_crash/scripts/: slow_crash_node.py
wall_follow/: CMakeLists.txt  package.xml
wall_follow/cfg/: dyn_reconfig.cfg
wall_follow/launch/: simulator.launch  simulator_slam.launch  teleop_wall_follow.launch
wall_follow/scripts/: safety_node.py  wall_follow.py  wall_follow_node.py
